app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
.vizz-wysiwyg {
  .cw-quill .ql-bubble .ql-tooltip {
    // Must be below .c-action-bar and the modal
    // for the link edition but over .cw-wysiwyg-toolbar
    z-index: 9;
  }

  .ql-container {
    font-family: $font-family-1;
    font-size: $font-size-normal;
  }

  .cw-wysiwyg-text {
    // Display the text elements with a 100% width
    // so the text can have some alignment
    flex-basis: 100%;
    max-width: none;

    ul,
    ol {
      display: block;
      margin-top: 0.5em;
      margin-bottom: 0.5em;
      list-style: initial;

      li {
        display: list-item;
        line-height: 2;

        &::before {
          font-family: $font-family-1;
        }
      }
    }
  }

  // Reduce the height of the buttons container
  // of the grid on the right size (basically the delete
  // button) because it prevents the user from
  // resizing the textarea of the HTML block
  .wysiwyg-grid-column-actions.-inline {
    height: 24px;
    padding: 0;
    transform: translate(100%, -50%);
  }

  .cw-wysiwyg-item-content.-html,
  .wysiwyg-grid-column__item {
    // Prevent the user from making the textarea
    // bigger than the space available
    textarea {
      max-width: 100%;
    }
  }

  .wysiwyg-grid-column__item {
    margin-top: 16px;
  }

  .cw-wysiwyg-item-content {
    flex-wrap: wrap;

    &.-html,
    &.-text {
      h1 {
        margin: 40px auto 10px;
        color: $color-4;
        font-size: $font-size-huge;
        font-weight: $font-weight-light;
        letter-spacing: 0.3px;
      }

      h2 {
        margin: 20px auto 5px;
        color: $color-4;
        font-size: $font-size-medium;
        font-weight: $font-weight-bold;
        letter-spacing: 0.2px;
      }

      p {
        font-size: $font-size-normal;
        letter-spacing: 0.1px;
        line-height: 1.5;

        & + p {
          margin-top: 0.9em;
        }
      }
    }

    &.-image {
      .fa-wysiwyg-file__preview {
        label {
          display: block;
          margin-bottom: 10px;
          text-align: left;
        }

        textarea {
          margin-top: 5px;
        }
      }
    }
  }

  blockquote {
    margin: 40px auto !important;
    padding: 0 10px !important;
    font-size: $font-size-big !important;
    font-weight: $font-weight-light;
    font-style: italic;
    border-left: none !important;

    &::before {
      content: "“";
    }

    &::after {
      content: "”";
    }

    @media #{$mq-mobile} {
      margin: 60px auto;
      font-size: $font-size-medium;
    }

    @if $theme == 3 {
      color: $color-4;
      line-height: 1.5;

      @media #{$mq-mobile} {
        line-height: 1.25;
      }
    }

    @if $theme == 2 {
      color: $color-4;
      letter-spacing: 0.2px;
      line-height: 1.1;
    }

    @if $theme == 1 {
      color: $color-1;
      font-family: $font-family-2;
      line-height: 1.5;

      @media #{$mq-mobile} {
        line-height: 1.25;
      }
    }
  }

  .cw-wysiwyg-list-item {
    &.-image {
      text-align: center;
    }

    &.-grid {
      .wysiwyg-grid-column {
        padding-bottom: 0;
      }
    }
  }

  .c-we-vega-chart-legend {
    top: 10px;
    right: 10px;

    .toggle-button {
      @extend .c-button.-mini;
      border: 1px solid;
      border-radius: 20px;
      border-color: $color-1;
      font-size: 0;

      span {
        margin: 0;
        border: 0;
        font-size: $font-size-small;
      }
    }
  }

  .c-we-chart,
  .c-we-chart .chart {
    min-height: 250px;
    width: 100%;
  }

  .c-we-chart-title {
    flex-basis: 100%;
    text-align: center;
    font-weight: $font-weight-bold;
  }

  .c-we-chart-caption {
    flex-basis: 100%;
    text-align: center;
    font-size: $font-size-small;
  }
}

.fa-wysiwyg-file {
  &__form {
    &--file {
      padding: 9px;
      margin: 0 0 10px 0;

      border: 1px solid $color-9;
    }

    &--caption {
      width: 100%;

      padding: 10px 10px;
      margin: 0 0 10px 0;

      font-size: $font-size-small;
      border: 1px solid $color-9;
      outline: none;
    }

    &--submit {
      background: $color-4;
      padding: 10px 30px;

      color: $color-3;
      font-size: $font-size-small;

      border: 1px solid transparent;
      cursor: pointer;
    }
  }

  &__preview {
    &--caption {
      display: block;
      font-size: $font-size-small;
      padding: 5px;
      color: $color-4;
    }

    &--captionInput {
      display: block;

      width: 100%;
      min-height: 30px;

      padding: 10px;
      margin: 20px 0 0 0;

      font-size: $font-size-small;
      border: 1px solid $color-9;
      color: $color-4;

      resize: none;
    }
  }
}

// Fixes a bug where the user can't select a widget
// in the modal because it's below the backdrop
.cw-modal {
  .modal-container {
    z-index: 1060;
  }
}

// Fixes a bug where the "Add" button is placed on top
// of the link edition modal
// Must be below .ql-tooltip and .c-actions-bar
.cw-wysiwyg-toolbar {
  z-index: 8;
}

